@@ -17,35 +17,41 @@
 package com.android.server.ranging.session;
 
 import static android.ranging.RangingPreference.DEVICE_ROLE_RESPONDER;
+import static android.ranging.RangingSession.Callback.REASON_UNSUPPORTED;
 
 import android.content.AttributionSource;
 import android.ranging.RangingCapabilities;
 import android.ranging.SessionHandle;
+import android.ranging.ble.cs.BleCsRangingCapabilities;
+import android.ranging.ble.rssi.BleRssiRangingCapabilities;
 import android.ranging.oob.OobHandle;
 import android.ranging.oob.OobResponderRangingConfig;
 import android.ranging.uwb.UwbAddress;
-import android.ranging.uwb.UwbComplexChannel;
 import android.ranging.uwb.UwbRangingCapabilities;
-import android.ranging.uwb.UwbRangingParams;
+import android.ranging.wifi.rtt.RttRangingCapabilities;
 import android.util.Log;
 
 import androidx.annotation.NonNull;
 
+import com.android.server.ranging.RangingEngine;
 import com.android.server.ranging.RangingInjector;
 import com.android.server.ranging.RangingServiceManager;
 import com.android.server.ranging.RangingTechnology;
+import com.android.server.ranging.blerssi.BleRssiOobCapabilities;
+import com.android.server.ranging.cs.CsOobCapabilities;
 import com.android.server.ranging.oob.CapabilityRequestMessage;
 import com.android.server.ranging.oob.CapabilityResponseMessage;
 import com.android.server.ranging.oob.MessageType;
-import com.android.server.ranging.oob.OobController.ReceivedMessage;
+import com.android.server.ranging.oob.OobController;
 import com.android.server.ranging.oob.OobHeader;
 import com.android.server.ranging.oob.SetConfigurationMessage;
+import com.android.server.ranging.oob.StopRangingMessage;
+import com.android.server.ranging.rtt.RttOobCapabilities;
+import com.android.server.ranging.rtt.RttOobConfig;
 import com.android.server.ranging.session.RangingSessionConfig.TechnologyConfig;
-import com.android.server.ranging.uwb.UwbConfig;
 import com.android.server.ranging.uwb.UwbOobCapabilities;
 import com.android.server.ranging.uwb.UwbOobConfig;
 
-import com.google.common.collect.ImmutableBiMap;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.util.concurrent.FluentFuture;
@@ -54,6 +60,7 @@ import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.ListeningScheduledExecutorService;
 
+import java.util.Set;
 import java.util.concurrent.ScheduledExecutorService;
 
 public class OobResponderRangingSession
@@ -63,8 +70,10 @@ public class OobResponderRangingSession
     private static final String TAG = OobResponderRangingSession.class.getSimpleName();
 
     private final ScheduledExecutorService mOobExecutor;
+    private final StopRangingListener mStopRangingListener;
 
     private OobHandle mPeer;
+    private OobController.OobConnection mOobConnection;
     private UwbAddress mMyUwbAddress;
 
     public OobResponderRangingSession(
@@ -77,16 +86,16 @@ public class OobResponderRangingSession
     ) {
         super(attributionSource, sessionHandle, injector, config, listener, executor);
         mOobExecutor = executor;
+        mStopRangingListener = new StopRangingListener();
     }
 
     @Override
     public void start(@NonNull OobResponderRangingConfig config) {
         mPeer = new OobHandle(mSessionHandle, config.getDeviceHandle().getRangingDevice());
+        mOobConnection = mInjector.getOobController().createConnection(mPeer);
         mMyUwbAddress = UwbAddress.createRandomShortAddress();
-        FluentFuture<ReceivedMessage> capabilitiesRequestFuture =
-                mInjector.getOobController().registerMessageListener(mPeer);
 
-        capabilitiesRequestFuture
+        mOobConnection.receiveData()
                 .transformAsync(this::handleCapabilitiesRequest, mOobExecutor)
                 .transformAsync(this::handleSetConfiguration, mOobExecutor)
                 .addCallback(new FutureCallback<>() {
@@ -95,25 +104,52 @@ public class OobResponderRangingSession
                         // TODO: Only start for technologies who have the start ranging immediately
                         //  bit set. Otherwise we need to wait for the start ranging message
                         OobResponderRangingSession.super.start(configs);
+                        mOobConnection
+                                .receiveData()
+                                .addCallback(mStopRangingListener, mOobExecutor);
                     }
 
                     @Override
                     public void onFailure(@NonNull Throwable t) {
                         Log.e(TAG, "Oob failed: ", t);
+                        mOobConnection.close();
+                        mSessionListener.onSessionStopped(REASON_UNSUPPORTED);
                     }
                 }, mOobExecutor);
     }
 
-    private ListenableFuture<ReceivedMessage> handleCapabilitiesRequest(ReceivedMessage message) {
+    private FluentFuture<byte[]> handleCapabilitiesRequest(byte[] data) {
         Log.i(TAG, "Received capabilities request message");
-        CapabilityResponseMessage response = getCapabilitiesResponse(
-                CapabilityRequestMessage.parseBytes(message.asBytes()));
+        CapabilityResponseMessage response =
+                getCapabilitiesResponse(CapabilityRequestMessage.parseBytes(data));
 
-        ListenableFuture<ReceivedMessage> setConfigurationFuture =
-                mInjector.getOobController().registerMessageListener(mPeer);
+        return mOobConnection
+                .sendData(response.toBytes())
+                .transformAsync((unused) -> mOobConnection.receiveData(), mOobExecutor);
+    }
 
-        mInjector.getOobController().sendMessage(message.getOobHandle(), response.toBytes());
-        return setConfigurationFuture;
+    private ListenableFuture<ImmutableSet<TechnologyConfig>> handleSetConfiguration(
+            byte[] data
+    ) throws RangingEngine.ConfigSelectionException {
+        Log.i(TAG, "Received set configuration message");
+
+        ImmutableSet.Builder<TechnologyConfig> configs = ImmutableSet.builder();
+        SetConfigurationMessage setConfigMessage = SetConfigurationMessage.parseBytes(data);
+
+        Log.v(TAG, "Configured ranging for technologies "
+                + setConfigMessage.getRangingTechnologiesSet());
+        UwbOobConfig uwbConfig = setConfigMessage.getUwbConfig();
+        if (uwbConfig != null) {
+            configs.add(uwbConfig.toTechnologyConfig(mMyUwbAddress, mPeer.getRangingDevice()));
+        }
+        // Skip CS because the CS responder side does not need to be configured.
+        RttOobConfig rttOobConfig = setConfigMessage.getRttConfig();
+        if (rttOobConfig != null) {
+            configs.add(rttOobConfig.toTechnologyConfig(mPeer.getRangingDevice(),
+                    DEVICE_ROLE_RESPONDER));
+        }
+
+        return Futures.immediateFuture(configs.build());
     }
 
     private CapabilityResponseMessage getCapabilitiesResponse(CapabilityRequestMessage request) {
@@ -121,65 +157,77 @@ public class OobResponderRangingSession
                 .getCapabilitiesProvider()
                 .getCapabilities();
 
-        // TODO: Use other technologies
-        UwbRangingCapabilities uwbCapabilities = myCapabilities.getUwbCapabilities();
-        return CapabilityResponseMessage.builder()
+        CapabilityResponseMessage.Builder response = CapabilityResponseMessage.builder()
                 .setHeader(OobHeader.builder()
                         .setMessageType(MessageType.CAPABILITY_RESPONSE)
                         .setVersion(OobHeader.OobVersion.CURRENT)
-                        .build())
-                .setRangingTechnologiesPriority(ImmutableList.of(RangingTechnology.UWB))
-                .setSupportedRangingTechnologies(ImmutableList.of(RangingTechnology.UWB))
-                .setUwbCapabilities(UwbOobCapabilities.builder()
-                        .setUwbAddress(mMyUwbAddress)
-                        .setSupportedChannels(
-                                ImmutableList.copyOf(
-                                        uwbCapabilities.getSupportedChannels()))
-                        .setSupportedPreambleIndexes(
-                                ImmutableList.copyOf(
-                                        uwbCapabilities.getSupportedPreambleIndexes()))
-                        .setSupportedConfigIds(
-                                ImmutableList.copyOf(uwbCapabilities.getSupportedConfigIds()))
-                        .setMinimumRangingIntervalMs(
-                                (int) uwbCapabilities.getMinimumRangingInterval().toMillis())
-                        .setMinimumSlotDurationMs(uwbCapabilities
-                                .getSupportedSlotDurations()
-                                .stream()
-                                .min(Integer::compare)
-                                .get())
-                        .setSupportedDeviceRole(
-                                ImmutableList.of(UwbOobConfig.OobDeviceRole.RESPONDER))
-                        .build())
+                        .build());
+
+        ImmutableList.Builder<RangingTechnology> supportedTechnologies = ImmutableList.builder();
+
+        if (request.getRequestedRangingTechnologies().contains(RangingTechnology.UWB)) {
+            UwbRangingCapabilities uwbCapabilities = myCapabilities.getUwbCapabilities();
+            if (uwbCapabilities != null) {
+                supportedTechnologies.add(RangingTechnology.UWB);
+                response.setUwbCapabilities(
+                        UwbOobCapabilities.fromRangingCapabilities(uwbCapabilities, mMyUwbAddress));
+            }
+        }
+        if (request.getRequestedRangingTechnologies().contains(RangingTechnology.CS)) {
+            BleCsRangingCapabilities csCapabilities = myCapabilities.getCsCapabilities();
+            if (csCapabilities != null) {
+                supportedTechnologies.add(RangingTechnology.CS);
+                response.setCsCapabilities(
+                        CsOobCapabilities.fromRangingCapabilities(csCapabilities));
+            }
+        }
+        if (request.getRequestedRangingTechnologies().contains(RangingTechnology.RTT)) {
+            RttRangingCapabilities rttRangingCapabilities =
+                    myCapabilities.getRttRangingCapabilities();
+            if (rttRangingCapabilities != null) {
+                supportedTechnologies.add(RangingTechnology.RTT);
+                response.setRttCapabilities(
+                        RttOobCapabilities.fromRangingCapabilities(rttRangingCapabilities));
+            }
+        }
+        if (request.getRequestedRangingTechnologies().contains(RangingTechnology.RSSI)) {
+            BleRssiRangingCapabilities bleRssiCapabilities =
+                    myCapabilities.getBleRssiCapabilities();
+            if (bleRssiCapabilities != null) {
+                supportedTechnologies.add(RangingTechnology.RSSI);
+                response.setBleRssiCapabilities(
+                        BleRssiOobCapabilities.fromRangingCapabilities(bleRssiCapabilities));
+            }
+        }
+
+        return response
+                .setRangingTechnologiesPriority(supportedTechnologies.build())
+                .setSupportedRangingTechnologies(supportedTechnologies.build())
                 .build();
     }
 
-    private ListenableFuture<ImmutableSet<TechnologyConfig>> handleSetConfiguration(
-            ReceivedMessage message
-    ) {
-        Log.i(TAG, "Received set configuration message");
-        SetConfigurationMessage body = SetConfigurationMessage.parseBytes(message.asBytes());
-        UwbOobConfig uwbConfig = body.getUwbConfig();
+    @Override
+    public void close() {
+        mOobConnection.close();
+    }
 
-        UwbConfig config = new UwbConfig.Builder(
-                new UwbRangingParams.Builder(
-                        uwbConfig.getSessionId(),
-                        uwbConfig.getSelectedConfigId(),
-                        mMyUwbAddress,
-                        uwbConfig.getUwbAddress())
-                        .setSessionKeyInfo(uwbConfig.getSessionKey())
-                        .setComplexChannel(new UwbComplexChannel.Builder()
-                                .setChannel(uwbConfig.getSelectedChannel())
-                                .setPreambleIndex(uwbConfig.getSelectedPreambleIndex())
-                                .build())
-                        .setRangingUpdateRate(uwbConfig.getSelectedRangingIntervalMs())
-                        .setSlotDuration(uwbConfig.getSelectedSlotDurationMs())
-                        .build())
-                .setPeerAddresses(
-                        ImmutableBiMap.of(mPeer.getRangingDevice(), uwbConfig.getUwbAddress()))
-                .setCountryCode(uwbConfig.getCountryCode())
-                .setDeviceRole(DEVICE_ROLE_RESPONDER)
-                .build();
+    /**
+     * Continuously listens for stop ranging messages during an ongoing ranging session until the
+     * underlying oob connection closes.
+     */
+    private class StopRangingListener implements FutureCallback<byte[]> {
 
-        return Futures.immediateFuture(ImmutableSet.of(config));
+        @Override
+        public void onSuccess(byte[] data) {
+            StopRangingMessage message = StopRangingMessage.parseBytes(data);
+            OobResponderRangingSession.super
+                    .stopTechnologies(Set.copyOf(message.getRangingTechnologiesToStop()));
+            mOobConnection.receiveData().addCallback(mStopRangingListener, mOobExecutor);
+        }
+
+        @Override
+        public void onFailure(Throwable t) {
+            Log.i(TAG, "Oob connection closed, no longer listening for stop ranging messages");
+        }
     }
 }
